--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/queldorei/navigation/top.phtml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/queldorei/navigation/top.phtml
@@ -47,7 +47,7 @@
                         <ol>
                             <li class="level1 nav-1-1 first">
                                 <a href="/manufacturing">
-                                    <span>Fabrication <img class="category_image" width="150" src="/media/wysiwyg/fabrication-1.png" alt="Fabrication"></span>
+                                    <span>Fabrication <img class="category_image" width="150" src="<?php echo Mage::getDesign()->getSkinUrl("images/navigation/fabrication-1.jpg"); ?>" alt="Fabrication"></span>
                                 </a>
                             </li>
                         </ol>
