--- a/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/default/css/styles.css
+++ b/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/default/css/styles.css
@@ -1440,13 +1440,13 @@ footer .liens-footer .copyright-wrapper p {
   font-weight:normal;
 }
 
-.cms-home-new #gammes
+.cms-home-new .gammes
 {
   padding-top:80px;
   background-color:#ffffff;
 }
 
-.cms-home-new #gammes article
+.cms-home-new .gammes article
 {
   clear:both;
   padding-bottom:20px;
@@ -1455,8 +1455,8 @@ footer .liens-footer .copyright-wrapper p {
   line-height:24px;
 }
 
-.cms-home-new #gammes article#original .product-image,
-.cms-home-new #gammes article#flottant .product-image
+.cms-home-new .gammes article.original .product-image,
+.cms-home-new .gammes article.flottant .product-image
 {
   float:left;
   width:45%;
@@ -1464,8 +1464,8 @@ footer .liens-footer .copyright-wrapper p {
   margin-right:10px;
 }
 
-.cms-home-new #gammes article#original .product-text,
-.cms-home-new #gammes article#flottant .product-text
+.cms-home-new .gammes article.original .product-text,
+.cms-home-new .gammes article.flottant .product-text
 {
   float:right;
   width:45%;
@@ -1473,8 +1473,8 @@ footer .liens-footer .copyright-wrapper p {
   margin-right:10px;
 }
 
-.cms-home-new #gammes article#printed .product-text,
-.cms-home-new #gammes article#x-trem .product-text
+.cms-home-new .gammes article.printed .product-text,
+.cms-home-new .gammes article.x-trem .product-text
 {
   float:left;
   width:45%;
@@ -1482,8 +1482,8 @@ footer .liens-footer .copyright-wrapper p {
   margin-right:10px;
 }
 
-.cms-home-new #gammes article#printed .product-image,
-.cms-home-new #gammes article#x-trem .product-image
+.cms-home-new .gammes article.printed .product-image,
+.cms-home-new .gammes article.x-trem .product-image
 {
   float:right;
   width:45%;
@@ -1491,34 +1491,34 @@ footer .liens-footer .copyright-wrapper p {
   margin-right:10px;
 }
 
-.cms-home-new #gammes article#original .product-text
+.cms-home-new .gammes article.original .product-text
 {
   padding-top:110px;
 }
 
-.cms-home-new #gammes article#printed .product-text
+.cms-home-new .gammes article.printed .product-text
 {
   padding-top:110px;
 }
 
-.cms-home-new #gammes article#flottant .product-text
+.cms-home-new .gammes article.flottant .product-text
 {
   padding-top:78px;
 }
 
-.cms-home-new #gammes article#x-trem .product-text
+.cms-home-new .gammes article.x-trem .product-text
 {
   padding-top:70px;
 }
 
 
-.cms-home-new #gammes article .product-text
+.cms-home-new .gammes article .product-text
 {
   color:#666666;
   font-size:16px;
 }
 
-.cms-home-new #gammes article .product-text a
+.cms-home-new .gammes article .product-text a
 {
   background-color:#30409f;
   text-transform:uppercase;
@@ -1531,7 +1531,7 @@ footer .liens-footer .copyright-wrapper p {
   margin-top:10px;
 }
 
-.cms-home-new #gammes article .product-text h2
+.cms-home-new .gammes article .product-text h2
 {
   font-family: "Lato", sans-serif;
   font-weight: 100;
@@ -1854,10 +1854,11 @@ footer .liens-footer .copyright-wrapper p {
     padding-right: 15px;
 	float: left;
 }
-.gammes-mobile {
+.cms-home-new .gammes.gammes-mobile {
     display: none !important;
 }
-#gammes.gammes-mobile-view {
+
+.cms-home-new .gammes.gammes-mobile-view {
     display: none;
 }
 /*------stj style 13june2017-----*/
@@ -2136,10 +2137,10 @@ h2.p2 span strong {
 	.block-subscribe .block-title{ padding: 0 0 22px!important; }
 	.block-subscribe .input-box {    width: 70%!important;}
     .catalog-category-view.category-products ul.products-grid.one_column_4{ float: none;  margin:50px auto 0; }
-	.gammes-mobile {display: block !important;}
-	.cms-home-new #gammes {display: none;}	
-	.cms-home-new #gammes article#printed .product-image, .cms-home-new #gammes article#x-trem .product-image { margin-top: 50px;}
-	.cms-home-new #gammes article#original .product-image, .cms-home-new #gammes article#flottant .product-image { margin-top: 50px;}
+	.cms-home-new .gammes {display: none;}	
+	.cms-home-new .gammes.gammes-mobile {display: block !important;}
+	.cms-home-new .gammes article.printed .product-image, .cms-home-new .gammes article.x-trem .product-image { margin-top: 50px;}
+	.cms-home-new .gammes article.original .product-image, .cms-home-new .gammes article.flottant .product-image { margin-top: 50px;}
 	footer .arguments-footer{display: block !important;}
 }
 
@@ -2166,9 +2167,9 @@ h2.p2 span strong {
     .wm-full-header .top-dropdowns .cart-top-container {   margin: 0px 0px 0 15px; padding-right:35px;}
     .wm-full-header .cart-top > a span {   padding-right: 0;     background: none;}
 	.insta #instafeed .col-xs-3 { width: 20%!important;}
-	.cms-home-new #gammes article#original .product-text {  padding-top: 20px;}
-	.cms-home-new #gammes article#printed .product-image, .cms-home-new #gammes article#x-trem .product-image { margin-top: 120px;}
-	.cms-home-new #gammes article#original .product-image, .cms-home-new #gammes article#flottant .product-image { margin-top: 100px;}
+	.cms-home-new .gammes article.original .product-text {  padding-top: 20px;}
+	.cms-home-new .gammes article.printed .product-image, .cms-home-new .gammes article.x-trem .product-image { margin-top: 120px;}
+	.cms-home-new .gammes article.original .product-image, .cms-home-new .gammes article.flottant .product-image { margin-top: 100px;}
 	 .faq-main-text span { padding: 0;}
 	
 }
@@ -2226,13 +2227,13 @@ h2.p2 span strong {
 	.cms-home-new #paralax { padding: 65px 0 0 0; }
 	.cms-home-new #intro { display: none;}
 	.cms-home-new #paralax { display: none;}	
-	.gammes-mobile {display: none !important;}
-	#gammes.gammes-mobile-view { display: block;}
-	.cms-home-new #gammes {  padding-top: 50px;}
-	.cms-home-new #gammes article#original .product-image, .cms-home-new #gammes article#flottant .product-image,
-	.cms-home-new #gammes article#printed .product-image, .cms-home-new #gammes article#x-trem .product-image { width: 100%; text-align: center; margin:0;}
-	.cms-home-new #gammes article#original .product-text, .cms-home-new #gammes article#flottant .product-text,
-	.cms-home-new #gammes article#printed .product-text, .cms-home-new #gammes article#x-trem .product-text { width: 100%; text-align:center; margin: 0 0 10% 0;  padding: 2% 0 0 0; }
+	.cms-home-new .gammes.gammes-mobile {display: none !important;}
+	.cms-home-new .gammes.gammes-mobile-view { display: block;}
+	.cms-home-new .gammes {  padding-top: 50px;}
+	.cms-home-new .gammes article.original .product-image, .cms-home-new .gammes article.flottant .product-image,
+	.cms-home-new .gammes article.printed .product-image, .cms-home-new .gammes article.x-trem .product-image { width: 100%; text-align: center; margin:0;}
+	.cms-home-new .gammes article.original .product-text, .cms-home-new .gammes article.flottant .product-text,
+	.cms-home-new .gammes article.printed .product-text, .cms-home-new .gammes article.x-trem .product-text { width: 100%; text-align:center; margin: 0 0 10% 0;  padding: 2% 0 0 0; }
 
 	 .faq-main-text h1 {margin: 0 0 30px 0;}
 	 .faq-main-text span { padding: 0 10px;     margin: 0 0 20px;}
@@ -2278,7 +2279,7 @@ h2.p2 span strong {
 	footer .arguments-footer .argument-footer h3 { font-size: 22px;   margin-bottom: 2px;}
 	footer .arguments-footer .argument-footer p { font-size: 14px;}
 	footer .arguments-footer .argument-footer a {  font-size: 12px; }
-	.cms-home-new #gammes article#x-trem .product-text { margin: 0 0 30% 0;}
+	.cms-home-new .gammes article.x-trem .product-text { margin: 0 0 30% 0;}
 }
 
 
