--- a/htdocs/css/styles.css
+++ b/htdocs/css/styles.css
@@ -45,13 +45,13 @@
 
 
 
-#gammes article .product-text
+.gammes article .product-text
 {
   color:#666666;
   font-size:16px;
 }
 
-#gammes article .product-text a
+.gammes article .product-text a
 {
   background-color:#30409f;
   text-transform:uppercase;
@@ -63,7 +63,7 @@
   text-decoration: none;
 }
 
-#gammes article .product-text h2
+.gammes article .product-text h2
 {
   font-family: "Lato", sans-serif;
 	font-weight: 300;
