--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/queldorei/navigation/top.phtml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/queldorei/navigation/top.phtml
@@ -56,7 +56,7 @@
                         <ol>
                             <li class="level1 nav-1-1 first">
                                 <a href="/faq">
-                                    <span>FAQ <img class="category_image" width="150" src="/media/wysiwyg/faq.jpg" alt="FAQ"></span>
+                                    <span>FAQ <img class="category_image" width="150" src="<?php echo Mage::getDesign()->getSkinUrl("images/navigation/faq.jpg"); ?>" alt="FAQ"></span>
                                 </a>
                             </li>
                         </ol>
