--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/modern/template/page/html/head.phtml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/modern/template/page/html/head.phtml
@@ -49,6 +49,12 @@ $config_slideshow = Mage::getStoreConfig('shopperslideshow', Mage::app()->getSto
 <link rel="apple-touch-icon" sizes="114x114" href="<?php echo $this->getSkinUrl(); ?>apple-touch-icon-114x114.png" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+<?php if ($config['enable_font']) :?>
+    <link href='https://fonts.googleapis.com/css?family=<?php echo str_replace(' ', '+', $config['font']); ?>:300,400,700' rel='stylesheet'>
+    <?php if ($config['price_font'] != $config['font'] ) : ?>
+        <link href='https://fonts.googleapis.com/css?family=<?php echo str_replace(' ', '+', $config['price_font']); ?>:300,400,700' rel='stylesheet'>
+    <?php endif; ?>
+<?php endif; ?>
 <script type="text/javascript" src="https://www.jumbobag.fr/skin/frontend/new_jumbobag/default/js/wow.js"></script>
 <script>
     new WOW().init();
@@ -66,12 +72,6 @@ $config_slideshow = Mage::getStoreConfig('shopperslideshow', Mage::app()->getSto
 <?php if (Mage::helper('shopperslideshow/data')->isSlideshowEnabled() && $config_slideshow['config']['slider'] == 'revolution') : ?>
     <script type="text/javascript" src="<?php echo Mage::getBaseUrl('js') . 'queldorei/jquery.themepunch.plugins.min.js'; ?>" async defer></script>
     <script type="text/javascript" src="<?php echo Mage::getBaseUrl('js') . 'queldorei/jquery.themepunch.revolution.min.js'; ?>" async defer></script>
-<?php endif; ?>
-<?php if ($config['enable_font']) :?>
-    <link href='//fonts.googleapis.com/css?family=<?php echo str_replace(' ', '+', $config['font']); ?>:300,400,700' rel='stylesheet' type='text/css'>
-    <?php if ($config['price_font'] != $config['font'] ) : ?>
-        <link href='//fonts.googleapis.com/css?family=<?php echo str_replace(' ', '+', $config['price_font']); ?>:300,400,700' rel='stylesheet' type='text/css'>
-    <?php endif; ?>
 <?php endif; ?>
 <?php
 $options_link = '?store='.Mage::app()->getStore()->getCode();
