--- a/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/default/css/local.css
+++ b/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/default/css/local.css
@@ -173,7 +173,7 @@ body.non-responsive{min-width:1200px;}
 .top-switch-bg .over{-webkit-box-shadow:0px 0px 10px 0px rgba(0, 0, 0, 0.15);-moz-box-shadow:0px 0px 10px 0px rgba(0, 0, 0, 0.15);box-shadow:0px 0px 10px 0px rgba(0, 0, 0, 0.15);}
 .top-switch-bg .over span{background:#fff;}
 .header-switch span{color:rgba(108,108,108,0.59);display:block;padding:0 10px;position:relative;z-index:2;}
-.header-switch span.current{display:inline;color:rgba(29,28,27,0.59);padding:0 12px 0 5px;background:url("../images/arrow_switch.png") 100% 50% no-repeat;}
+.header-switch span.current{display:inline;color:rgba(29,28,27,0.59);padding:0 12px 0 5px;background:url("../images/arrow_switch.png") 100% 50% no-repeat;font-weight: normal;}
 .header-dropdown{background:#fff;padding:14px;display:none;position:absolute;margin:0;-webkit-box-shadow:0px 0px 10px 0px rgba(0, 0, 0, 0.15);-moz-box-shadow:0px 0px 10px 0px rgba(0, 0, 0, 0.15);box-shadow:0px 0px 10px 0px rgba(0, 0, 0, 0.15);}
 .header-dropdown ul{}
 .header-dropdown ul li{}
